# Verb_verification

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
res/: verbs.txt
src/: main.cpp  verbStruct.cpp
src/headers/: verbStruct.h
test/: main_test.cpp  verbStructTest.cpp  verbStructTest.h
